5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1826_1651.log
== TEST (2019-06-12 18:36:55) 
-- CODE:
from numpy import*
pele=array(int(input("pele: "))
for i in pele:
	if(i == "MC"):
		mc=mc1+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1	
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1
print(e)			  
			  
-- ERROR:
File "XXXX", line 3
    for i in pele:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:27) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: "))
for i in pele:
	if(i == "MC"):
		mc=mc1+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1	
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1
print(e)			  
			  
-- ERROR:
File "XXXX", line 3
    for i in pele:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:04) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: ")))
for i in pele:
	if(i == "MC"):
		mc=mc1+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1	
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1
print(e)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:39:20) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: ")))
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i == "MC"):
		mc=mc1+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1	
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1
print(e)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:40:00) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: "))).split
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i == "MC"):
		mc=mc1+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1	
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1
print(e)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:37) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: "))).split
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i == "MC"):
		mc=mc1+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1	
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1
print(e)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:27) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: "))).split(' ')
mc=0
c=0
cm=0
em=0
e=0
me=0

print(pele)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:25) 
-- CODE:
from numpy import*
pele=array(eval(input("pele: "))).split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0

print(pele)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:36) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
print(pele)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:26:13) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')



print(pele[2])			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:27:58) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0

print(pele)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:07) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(mc)			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:35:14) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:35:56) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))			  
-- EXECUTION TIME:
0.762604
-- TEST CASE 1:
---- input:
MC,C,C,C,CM,EM,EM,ME,E
---- correct output:
3
[1 3 1 2 1 1]
---- user output:
3
-- TEST CASE 2:
---- input:
MC,C,C,C,CM,ME,EM,E,E
---- correct output:
3
[1 3 1 1 2 1]
---- user output:
3
-- TEST CASE 3:
---- input:
C,C,C,C,CM,EM,EM,ME,E
---- correct output:
4
[0 4 1 2 1 1]
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:36:02) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:36:21) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:37:54) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v_zeros=zeros(size(pele, dtype=int))
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:23) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v_zeros=zeros(size(pele), dtype=int))
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
File "XXXX", line 9
    v_zeros=zeros(size(pele), dtype=int))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:25) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v_zeros=zeros(size(pele), dtype=int))
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
File "XXXX", line 9
    v_zeros=zeros(size(pele), dtype=int))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:40) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
v_zeros=zeros(size(pele), dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:42:42) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
aux=0
v_zeros=zeros(6, dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
		v_zeros[aux]=v_zeros[aux]+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:43:07) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
aux=0
v_zeros=zeros(6, dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
		v_zeros[aux]=v_zeros[0]+1
	elif(i=="C"):
		c=c+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:03) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
aux=0
v_zeros=zeros(6, dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
		v_zeros[0]=v_zeros[0]+1
	elif(i=="C"):
		c=c+1
		v_zeros[1]=v_zeros[1]+1
	elif(i=="CM"):
		cm=cm+1
	elif(i=="EM"):
		em=em+1
	elif(i=="E"):
		e=e+1
	elif(i=="ME"):
		me=me+1				
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:46:16) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
aux=0
v_zeros=zeros(6, dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
		v_zeros[0]=v_zeros[0]+1
	elif(i=="C"):
		c=c+1
		v_zeros[1]=v_zeros[1]+1
	elif(i=="CM"):
		cm=cm+1
		v_zeros[2]=v_zeros[2]+1
	elif(i=="EM"):
		em=em+1
		v_zeros[3]=v_zeros[3]+1
	elif(i=="E"):
		e=e+1
		v_zeros[4]=v_zeros[4]+1
	elif(i=="ME"):
		me=me+1
		v_zeros[5]=v_zeros[5]+1
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:46:18) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
aux=0
v_zeros=zeros(6, dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
		v_zeros[0]=v_zeros[0]+1
	elif(i=="C"):
		c=c+1
		v_zeros[1]=v_zeros[1]+1
	elif(i=="CM"):
		cm=cm+1
		v_zeros[2]=v_zeros[2]+1
	elif(i=="EM"):
		em=em+1
		v_zeros[3]=v_zeros[3]+1
	elif(i=="E"):
		e=e+1
		v_zeros[4]=v_zeros[4]+1
	elif(i=="ME"):
		me=me+1
		v_zeros[5]=v_zeros[5]+1
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- EXECUTION TIME:
0.966838
-- TEST CASE 1:
---- input:
MC,C,C,C,CM,EM,EM,ME,E
---- correct output:
3
[1 3 1 2 1 1]
---- user output:
3
[1 3 1 2 1 1]
-- TEST CASE 2:
---- input:
MC,C,C,C,CM,ME,EM,E,E
---- correct output:
3
[1 3 1 1 2 1]
---- user output:
3
[1 3 1 1 2 1]
-- TEST CASE 3:
---- input:
C,C,C,C,CM,EM,EM,ME,E
---- correct output:
4
[0 4 1 2 1 1]
---- user output:
pele: 4
[0 4 1 2 1 1]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:46:35) 
-- CODE:
from numpy import*
pele=input("pele: ").split(',')
mc=0
c=0
cm=0
em=0
e=0
me=0
aux=0
v_zeros=zeros(6, dtype=int)
for i in pele:
	if(i=="MC"):
		mc=mc+1
		v_zeros[0]=v_zeros[0]+1
	elif(i=="C"):
		c=c+1
		v_zeros[1]=v_zeros[1]+1
	elif(i=="CM"):
		cm=cm+1
		v_zeros[2]=v_zeros[2]+1
	elif(i=="EM"):
		em=em+1
		v_zeros[3]=v_zeros[3]+1
	elif(i=="E"):
		e=e+1
		v_zeros[4]=v_zeros[4]+1
	elif(i=="ME"):
		me=me+1
		v_zeros[5]=v_zeros[5]+1
print(max(mc,c,cm,em,e,me))	
print(v_zeros)
-- EXECUTION TIME:
1.0436
-- TEST CASE 1:
---- input:
MC,C,C,C,CM,EM,EM,ME,E
---- correct output:
3
[1 3 1 2 1 1]
---- user output:
3
[1 3 1 2 1 1]
-- TEST CASE 2:
---- input:
MC,C,C,C,CM,ME,EM,E,E
---- correct output:
3
[1 3 1 1 2 1]
---- user output:
3
[1 3 1 1 2 1]
-- TEST CASE 3:
---- input:
C,C,C,C,CM,EM,EM,ME,E
---- correct output:
4
[0 4 1 2 1 1]
---- user output:
4
[0 4 1 2 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
